--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,10 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+  "short_name": "Slate",
+  "name": "Slate Note App",
+  "icons": {
+    "48": "logo.svg",
+    "96": "logo.svg"
+  },
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#ffffff",
